# plugin-crosswalk

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: releasing.md
src/plugin_crosswalk/: __init__.py  cli.py  converter.py
tests/: test_converter.py
tests/fixtures/sample_claude_plugin/.claude-plugin/: marketplace.json
tests/fixtures/sample_claude_plugin/agents/shared/: standards.md
tests/fixtures/sample_claude_plugin/commands/: do-the-thing.md
tests/fixtures/sample_claude_plugin/scripts/: helper.sh
tests/fixtures/sample_claude_plugin/skills/development/multi-line-skill/: SKILL.md
tests/fixtures/sample_claude_plugin/skills/getting-started/hello-skill/: SKILL.md
tests/fixtures/sample_codex_plugin/: README.md
tests/fixtures/sample_codex_plugin/.codex-plugin/: plugin.json
tests/fixtures/sample_codex_plugin/commands/: do-the-thing.md
tests/fixtures/sample_codex_plugin/skills/basic/: SKILL.md
tests/fixtures/sample_universal_skills/: AGENTS.md
tests/fixtures/sample_universal_skills/.agents/skills/portable-one/: SKILL.md
